This file lists all changes made to the game driver in all gory detail.
See the file HISTORY for a user-oriented summary of all the changes.

11-Dec-2002 (Lars Duening)  (3.3.324)
  - (doc/concepts/negotiation, src/wk/) Added some telnet protocol
    related documentation.
  - (func_spec, lex.c, prolang.y, interpret.c) New operators '&&=' and
     '||=' (suggested by Croft).

09-Dec-2002 (Lars Duening)  (3.3.323)
  - (mudlib/telnetneg.c) Updated (thanks, Fiona!)
  - (mudlib/test_master.c) Added testcode for using charmode (thanks, Fiona!)
  - (comm) Fiona provided more patches: SAVE_NOECHO, which makes sure that
      the client can switch to CHARMODE before also setting NOECHO; and
      SIMULATE_CHARMODE which allows the mudlib to switch to charmode even
      if the client can do only linemode.
  - (files.c) Efuns copy_file() and rename() no longer throw errors
      on failures, but just return a non-0 value (reported by Menaures).

05-Dec-2002 (Lars Duening)  (3.3.322)
  - (config.h, comm, gcollect.c, main.c) Replaced USE_PTHREAD by USE_PTHREADS.
  - (comm.c) Before printing the prompt, current_object is set to NULL
      so that the player's catch_tell() is sure to be able to see the
      prompt (reported by mudder@Furtual.ORG).

04-Dec-2002 (Lars Duening)  (3.3.321)
  - (make_func.y, comm.c, main.c, prolang.y) Removed warnings (reported by
      Coogan).
  - (comm.c) When logging on a new player, the prompt wasn't printed - in
      particular the prompt set by input_to(INPUT_PROMPT) (reported by
      Nostradamus).
  - (main.c) If the reserved areas can be reallocated, the out_of_memory
      flag is reset.
  - (simulate.c) catch() reports an 'out_of_memory' condition only
      if it was raised during the execution of the guarded code.
  - (smalloc.c) Changed OVERHEAD to M_OVERHEAD.

03-Dec-2002 (Lars Duening)  (3.3.320)
  - (patch-o-matic) Updated to new executable name.
  - (prolang.y, object.c) The filenames returned by include_list()