@@ -30,13 +30,12 @@
 ;; TODO: The regexp() functions and sscanf() should be able to handle '\0' as
 ;; TODO:: data byte, not as terminator.
               
-(Project-Version lpmud 3-3 324)
-(Parent-Version lpmud 3-3 323)
-(Version-Log "Added some documentation.
-New operators '&&=' and '||='.")
+(Project-Version lpmud 3-3 325)
+(Parent-Version lpmud 3-3 324)
+(Version-Log "Removed a memory leak in the mapping code.")
 (New-Version-Log
 "")
-(Checkin-Time "Wed, 11 Dec 2002 23:17:34 -0700")
+(Checkin-Time "Thu, 12 Dec 2002 22:42:42 -0700")
 (Checkin-Login lars)
 (Populate-Ignore ("~$" "\\.o$" "core$" "\\.emacs" "\\.a$" "\\.deps"
                   "\\.gz$" "\\.orig$" "\\.rej$" "\\.xSYM" "^driver$"
@@ -73,7 +72,7 @@ New operators '&&=' and '||='.")
   (README (lpmud/n/0_README 1.4.1.1 644))
   (COPYRIGHT (lpmud/d/20_Copyright 1.10.1.8 644))
   (CREDITS (lpmud/d/22_CREDITS 1.70.1.53 644))
-  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.387 644))
+  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.388 644))
   (HISTORY (lpmud/f/49_HISTORY 1.291 644))
   (INSTALL (lpmud/d/18_INSTALL 1.11.1.19 644))
   (COPYING.LIB (lpmud/k/14_COPYING.LI 1.2 644))
@@ -166,7 +165,7 @@ New operators '&&=' and '||='.")
   (src/main.h (lpmud/f/31_main.h 1.14.1.4.1.12 644))
   (src/main.c (lpmud/b/8_main.c 1.60.1.43.1.29 644))
   (src/mapping.h (lpmud/f/30_mapping.h 1.12.1.14 644))
-  (src/mapping.c (lpmud/b/6_mapping.c 1.36.1.53 644))
+  (src/mapping.c (lpmud/b/6_mapping.c 1.36.1.54 644))
   (src/md5.h (lpmud/l/18_md5.h 1.2 644))
   (src/md5.c (lpmud/l/19_md5.c 1.6 644))
   (src/mempools.h (lpmud/d/48_mempools.h 1.2.1.3 644))
